# ecommerce-analytics

./: .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: ab_test.yaml  metrics.yaml  reports.yaml  settings.yaml
pages/: 0_overview.py  1_clickstream.py  2_orders.py  3_recommendations.py  4_ab_testing.py  5_reports.py
src/analytics/: clickstream.py  orders.py  recommendations.py
src/analytics/ab_testing/: bayesian.py  corrections.py  diagnostics.py  frequentist.py  models.py  power.py  sequential.py
src/config/: __init__.py  loader.py  models.py
src/data/: bigquery_client.py  cache.py  mock_data.py  query_builder.py
src/data/queries/: ab_tests.sql  clickstream.sql  orders.sql  recommendations.sql
src/reporting/: generator.py  renderers.py
src/reporting/templates/: business.html  executive.html  technical.html
src/reporting/templates/components/: chart_embed.html  kpi_card.html  traffic_light.html  trend_arrow.html
src/utils/: chart_factory.py  date_utils.py  formatters.py  validators.py
tests/: conftest.py  test_bayesian.py  test_clickstream.py  test_corrections.py  test_diagnostics.py  test_frequentist.py  test_orders.py  test_power.py  test_recommendations.py  test_sequential.py
